feat(ai): 工作流执行与审批功能实现
- 添加工作流执行相关API接口，包括取消执行、流式执行等功能
- 实现工作流审批流程，支持待审批任务的查询和处理
- 集成流式工作流执行，在聊天界面中支持工作流节点状态展示
- 添加URL安全验证工具函数，防止恶意链接风险
- 更新数据库消息表结构，增加工作流执行ID关联字段
- 优化工作流事件处理逻辑，支持节点启动、完成、中断等状态变化
- 实现工作流执行中断后的恢复机制，确保审批流程连续性